@@ -1,3 +1,8 @@
+2021-03-29  Morten Welinder  <terra@gnome.org>
+
+	* html.c (html_write_cell_content): Export also external (file)
+	links.
+
 2021-03-14  Morten Welinder <terra@gnome.org>
 
 	* Release 1.12.49
